# github-fast-downloader

./: .gitignore  README.md  pyproject.toml
src/github_fast_downloader/: __init__.py  github_fast_downloader.py
tests/: test_all.py
