[project]
name = "github-fast-downloader"
version = "0.1.1"
description = "A library for quickly retriving files and directories from GitHub reposities by utilizing git's sparse checkout feature."
readme = "README.md"
authors = [{ name = "Stefan Abi-Karam", email = "stefanabikaram@gatech.edu" }]
requires-python = ">=3.13"
dependencies = []

[project.urls]
homepage = "https://github.com/stefanpie/github-fast-downloader"
documentation = "https://github.com/stefanpie/github-fast-downloader"
repository = "https://github.com/stefanpie/github-fast-downloader"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.8.4"]
