[project]
name = "github-fast-downloader"
version = "0.1.4"
description = "A library for quickly retrieving files and directories from GitHub repositories by utilizing git's sparse checkout feature."
readme = "README.md"
authors = [{ name = "Stefan Abi-Karam", email = "stefanabikaram@gatech.edu" }]
maintainers = [
    { name = "Stefan Abi-Karam", email = "stefanabikaram@gatech.edu" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []
keywords = [
    "git",
    "github",
    "sparse-checkout",
    "download",
    "repository",
    "clone",
    "vcs",
    "version-control",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]

[project.urls]
homepage = "https://github.com/stefanpie/github-fast-downloader"
documentation = "https://github.com/stefanpie/github-fast-downloader"
repository = "https://github.com/stefanpie/github-fast-downloader"
issues = "https://github.com/stefanpie/github-fast-downloader/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.8.4"]
